2003-11-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-real-url): New function.
	(shimbun-content-type, shimbun-url-exists-p): Removed.

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers): Call
	`shimbun-real-url' instead of calling `w3m-attributes' directly.

2003-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers): Extract a
	timestamp from the index page for okuyami and shasetsu groups;
	don't use `w3m-current-url' (temporally).

2003-11-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-proc.el (w3m-process-wait-process): Invert the return value
	of sit-for() that waits an asynchronous process.
	(w3m-process-kill-process): Relax the condition that checks
	whether a given process has already finished or not.

2003-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search): Use `w3m-goto-url' instead of `w3m'.
	* w3m-weather.el (w3m-weather): Ditto.

	* w3m.el (w3m-obey-w3m-pop-up-frames): Abolish.
	(w3m-goto-url-new-session): Find an existing emacs-w3m buffer and
	then make a copy of it; use `w3m-goto-url' instead of `w3m' if
	there is no emacs-w3m buffer.
	(w3m-browse-url): Revert last change; rename the optional arg to
	`new-session'; call `w3m-goto-url-new-session' or `w3m-goto-url'.
	(w3m-select-buffer): Use `w3m-goto-url' instead of `w3m'.
	(w3m-safe-view-this-url): Ditto.

2003-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-antenna.el (w3m-antenna): Don't pass the interactive flag to
	`w3m-goto-url'.
	* w3m-bookmark.el (w3m-bookmark-view): Ditto.
	* w3m-cookie.el (w3m-cookie): Ditto.
	* w3m-dtree.el (w3m-dtree): Ditto.
	* w3m-namazu.el (w3m-namazu): Ditto.
	* w3m-perldoc.el (w3m-perldoc): Ditto.

	* w3m.el (w3m-copy-buffer): Don't pop up a window or a frame if
	`w3m-goto-url' is called.
	(w3m-goto-url): Abolish the 8th arg `interactive-p'; pop up a
	window or a frame anyway.
	(w3m-goto-url-new-session): Abolish the `interactive-p' argument;